--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
           </div>
           <div class="flex flex-col mt-4 overflow-auto" style="height:250px; max-height:250px;">
             <template x-for="pomodoro in pomodoros">
-              <div class="mb-2" :class="pomodoro.state === 'running' && configs.runningFirst ? 'order-1' : 'order-2' ">
+              <div class="mb-2" :class="pomodoro.state === 'running' && configs.running_first ? 'order-1' : 'order-2' ">
               <div class="flex items-center pl-2 border rounded mt-2 transition-all" 
                 :class="{
                     'running': 'bg-yellow-50 border-yellow-200 text-yellow-500', 
@@ -142,13 +142,13 @@
 
           </ul>
           <label class="w-full block text-gray-500">
-            <input class="mr-2 leading-tight" type="checkbox" x-model="configs.runningFirst">
+            <input class="mr-2 leading-tight" type="checkbox" x-model="configs.running_first">
             <span class="text-sm">
               Always display running pomodoro at the top
             </span>
           </label>
           <label class="w-full block text-gray-500">
-            <input class="mr-2 leading-tight" type="checkbox" x-model="configs.startAnytime">
+            <input class="mr-2 leading-tight" type="checkbox" x-model="configs.start_anytime">
             <span class="text-sm">
               Can start new pomodoro without finishing the current one
             </span>
