fix(#5): Moves x-cloak to html file

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title x-ref="title">🍅 Pomodo tracker</title>
   </head>
+  <style>
+    [x-cloak] { display: none !important; }
+  </style>
   <body 
     x-data="pomodoro" 
     class="w-full flex justify-center bg-gradient-to-t from-blue-500 to-indigo-500 min-h-screen flex justify-items-center items-center min-w-full"
