fix(no-issue): tweaks some styles

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title x-ref="title">🍅 Pomodo tracker</title>
+    <title x-ref="title">🍅 Named Pomodoros</title>
   </head>
   <style>
     [x-cloak] { display: none !important; }
@@ -13,9 +13,9 @@
     x-data="pomodoro" 
     class="w-full flex justify-center bg-gradient-to-t from-blue-500 to-indigo-500 min-h-screen flex justify-items-center items-center min-w-full"
     x-cloak>
-    <main class="h-100 w-full flex-col justify-center font-sans p-8 bg-white shadow rounded m-4" style="max-width:450px;">
+    <main class="h-100 w-full flex-col justify-center font-sans p-8 bg-white shadow rounded m-4 max-w-[450px] h-[500px]">
       <header class="mb-4">
-        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">🍅 Pomodoro tracker</h1>
+        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">🍅 Named Pomodoros</h1>
       </header>
       <div>
         <header class="text-sm font-medium text-center text-gray-500 border-b border-gray-200">
@@ -23,8 +23,10 @@
             <template x-for="tab in tabs.items">
               <li class="mr-2 flex" :class="tab.extra_class">
                 <span 
-                  class="inline-block p-4 border-b-2 border-transparent rounded-t-lg cursor-pointer" 
-                  :class="tabs.active === tab.id ? 'text-blue-600 border-blue-600 active' : 'hover:text-gray-600 hover:border-gray-300'" 
+                  class="inline-block p-4 border-b-2 rounded-t-lg cursor-pointer" 
+                  :class="tabs.active === tab.id 
+                    ? 'text-blue-600 border-blue-600 active' 
+                    : 'border-transparent hover:text-gray-600 hover:border-gray-300'" 
                   @click="tabs.active = tab.id"
                   >
                   <template x-if="tab.label">
@@ -43,7 +45,7 @@
             </template>
           </ul>
         </header>
-        <section x-show="tabs.active === 'running'" style="min-height: 300px;">
+        <section x-show="tabs.active === 'running'" class="min-h-[320px]">
           <div class="flex my-4 bg-white">
             <input 
               class="shadow appearance-none border rounded w-full py-2 px-3 mr-4 text-grey-darker" 
@@ -59,7 +61,7 @@
               Add 
             </button>
           </div>
-          <div class="flex flex-col mt-4 overflow-auto" style="height:250px; max-height:250px;">
+          <div class="flex flex-col mt-4 overflow-auto h-[250px] max-h-[250px]">
             <template x-for="pomodoro in pomodoros">
               <div class="mb-2" :class="pomodoro.state === 'running' && configs.running_first ? 'order-1' : 'order-2' ">
               <div class="flex items-center pl-2 border rounded mt-2 transition-all" 
@@ -98,9 +100,8 @@
                     </svg>
                   </button>
                   <button 
-                    style="min-width:70px;" 
                     type="button" 
-                    class="my-1 px-3 py-2 bg-gray-400 text-gray-100 shadow flex rounded-r-md shadow-sm" 
+                    class="my-1 px-3 py-2 bg-gray-400 text-gray-100 shadow flex rounded-r-md shadow-sm min-w-[70px]" 
                     x-init="window.setInterval(() => { 
                       countdown(pomodoro);
                     }, 1_000)">
@@ -139,10 +140,10 @@
             </template>
           </div>
         </section>
-        <section x-show="tabs.active === 'archived'" style="min-height: 300px;">        
+        <section x-show="tabs.active === 'archived'" class="min-h-[320px]">        
           <p x-text="JSON.stringify(pomodoros.filter(pomodoro => pomodoro.state === 'archived'))"></p>
         </section>
-        <section x-show="tabs.active === 'configs'" style="min-height: 300px;" class="pt-4">
+        <section x-show="tabs.active === 'configs'" class="pt-4 min-h-[320px]">
           <h2 class="text-lg mb-2 text-gray-600 font-bold">Preferences</h2>
           <ul>
 
