--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
                     'paused': 'bg-gray-50 border-gray-200 text-gray-500', 
                     'finished': 'bg-blue-50 border-blue-200 text-blue-500' 
                   }[pomodoro.state]"><p x-show="!pomodoro.is_editing" class="w-full py-2 m-2 text-sm font-medium" @click="pomodoro.is_editing = true" x-text="pomodoro.text"></p><textarea x-show="pomodoro.is_editing" type="text" class="w-full py-2 m-2 text-sm font-medium bg-transparent overflow-hidden outline-none" @click.away="pomodoro.is_editing = false" @keyup.enter="pomodoro.is_editing = false" maxlength="80" x-model="pomodoro.text">
-                </textarea><div class="inline-flex" role="group"><button type="button" class="my-1 px-3 py-2 bg-gray-500 text-white cursor-pointer shadow rounded-l-md shadow-sm" @click="pomodoro.state === 'running' ? pause(pomodoro) : run(pomodoro)"><svg class="fill-current text-white text-lg w-4" viewBox="0 0 512 512" width="24px" height="24px"><path :d="icons[{
+                </textarea><div class="inline-flex" role="group"><button type="button" class="my-1 px-3 py-2 bg-gray-500 text-white cursor-pointer shadow rounded-l-md shadow-sm" @click="update_state(pomodoro.state === states.running ? states.paused : states.running, pomodoro)"><svg class="fill-current text-white text-lg w-4" viewBox="0 0 512 512" width="24px" height="24px"><path :d="icons[{
                         [states.running]: 'pause',
                         [states.paused]: 'play',
                         [states.finished]: 'pause'
