--- a/src/index.html
+++ b/src/index.html
@@ -63,80 +63,91 @@
           </div>
           <div class="flex flex-col mt-4 overflow-auto h-[250px] max-h-[250px]">
             <template x-for="pomodoro in pomodoros">
-              <div class="mb-2" :class="pomodoro.state === 'running' && configs.running_first ? 'order-1' : 'order-2' ">
-              <div class="flex items-center pl-2 border rounded mt-2 transition-all" 
-                :class="{
-                    'running': 'bg-yellow-50 border-yellow-200 text-yellow-500', 
-                    'paused': 'bg-gray-50 border-gray-200 text-gray-500', 
-                    'finished': 'bg-blue-50 border-blue-200 text-blue-500' 
-                  }[pomodoro.state]"
-                >
-                <p 
-                  x-show="!pomodoro.is_editing" 
-                  class="w-full py-2 m-2 text-sm font-medium" 
-                  @click="pomodoro.is_editing = true" 
-                  x-text="pomodoro.text"></p>
-                <textarea 
-                  x-show="pomodoro.is_editing" 
-                  type="text" 
-                  class="w-full py-2 m-2 text-sm font-medium bg-transparent overflow-hidden outline-none" 
-                  @click.away="pomodoro.is_editing = false" 
-                  @keyup.enter="pomodoro.is_editing = false" 
-                  maxlength="80" 
-                  x-model="pomodoro.text">
-                </textarea>
-                <div class="inline-flex" role="group">
-                  <button 
-                    type="button" 
-                    class="my-1 px-3 py-2 bg-gray-500 text-white cursor-pointer shadow rounded-l-md shadow-sm" 
-                    @click="update_state(pomodoro.state === states.running ? states.paused : states.running, pomodoro)">
-                    <svg class="fill-current text-white text-lg w-4" viewBox="0 0 512 512" width="24px" height="24px">
-                      <path :d="icons[{
-                        [states.running]: 'pause',
-                        [states.paused]: 'play',
-                        [states.finished]: 'pause'
-                      }[pomodoro.state]]" 
-                      />
-                    </svg>
-                  </button>
-                  <button 
-                    type="button" 
-                    class="my-1 px-3 py-2 bg-gray-400 text-gray-100 shadow flex rounded-r-md shadow-sm min-w-[70px]" 
-                    x-init="window.setInterval(() => { 
-                      countdown(pomodoro);
-                    }, 1_000)">
-                    <span x-text="Math.floor(pomodoro.time_left / 60)"></span>
-                    <span>:</span>
-                    <span x-text="Math.floor(pomodoro.time_left % 60) < 10 ? '0' + Math.floor(pomodoro.time_left % 60) : Math.floor(pomodoro.time_left % 60)">
+              <article 
+                class="mb-2" 
+                :class="pomodoro.state === states.running && configs.running_first ? 'order-1' : 'order-2' ">
+                <div 
+                  class="flex items-center pl-2 border rounded mt-2 transition-all" 
+                  :class="template_by_state[pomodoro.state].classes">
+                  <p 
+                    x-show="!pomodoro.is_editing" 
+                    class="w-full py-2 m-2 text-sm font-medium" 
+                    @click="pomodoro.is_editing = true" 
+                    x-text="pomodoro.text"></p>
+                  <textarea 
+                    x-show="pomodoro.is_editing" 
+                    type="text" 
+                    class="w-full py-2 m-2 text-sm font-medium bg-transparent overflow-hidden outline-none" 
+                    @click.away="pomodoro.is_editing = false" 
+                    @keyup.enter="pomodoro.is_editing = false" 
+                    maxlength="80" 
+                    x-model="pomodoro.text">
+                  </textarea>                
+                  <div class="inline-flex">
+                    <button 
+                      type="button" 
+                      class="my-1 px-3 py-2 text-white cursor-pointer shadow rounded-l-md shadow-sm" 
+                      :class="template_by_state[pomodoro.state].timer.classes.action"
+                      @click="update_state(template_by_state[pomodoro.state].timer.update_state_to, pomodoro)">
+                      <svg class="fill-current text-white text-lg w-4" viewBox="0 0 512 512" width="24px" height="24px">
+                        <path :d="icons[template_by_state[pomodoro.state].timer.icon]" />
+                      </svg>
+                    </button>                  
+                    <button 
+                      type="button" 
+                      class="my-1 px-3 py-2 shadow flex rounded-r-md shadow-sm min-w-[70px]" 
+                      :class="template_by_state[pomodoro.state].timer.classes.counter"
+                      x-init="window.setInterval(() => { countdown(pomodoro);}, 1_000)">
+                      <span x-text="Math.floor(pomodoro[template_by_state[pomodoro.state].timer.property] / 60)"></span>
+                      <span>:</span>
+                      <span x-text="Math.floor(pomodoro[template_by_state[pomodoro.state].timer.property] % 60) < 10 ? '0' + Math.floor(pomodoro[template_by_state[pomodoro.state].timer.property] % 60) : Math.floor(pomodoro[template_by_state[pomodoro.state].timer.property] % 60)">
                     </span>
-                  </button>
+                    </button>                    
+                  </div>    
+                  <!-- add action button -->          
+                  <template x-if="template_by_state[pomodoro.state].button.name === 'remove'">
+                    <button 
+                      class="m-1 rounded-md px-3 py-2 text-white shadow flex bg-red-500"
+                      :class="template_by_state[pomodoro.state].button.disabled && 'cursor-default events-none opacity-50'"
+                      type="button" 
+                      @click="remove(pomodoro)">
+                      <svg class="fill-current text-white text-lg w-4" viewBox="0 0 512 512" width="24px" height="24px">
+                        <path :d="icons.trash" />
+                      </svg>                    
+                    </button> 
+                  </template>                     
+                  <template x-if="template_by_state[pomodoro.state].button.name === 'save'">
+                    <button 
+                      class="m-1 rounded-md px-3 py-2 text-white shadow flex bg-green-500"
+                      :class="template_by_state[pomodoro.state].button.disabled && 'cursor-default events-none opacity-50'"
+                      type="button" 
+                      @click="save(pomodoro)">
+                      <svg class="fill-current text-white text-lg w-4" viewBox="0 0 512 512" width="24px" height="24px">
+                        <path :d="icons.check" />
+                      </svg>                    
+                    </button> 
+                  </template>                                       
                 </div>
-                <button 
-                  type="button" 
-                  class="m-1 rounded-md px-3 py-2 text-white shadow flex" 
-                  :class="{
-                    'running': 'cursor-default bg-red-500 events-none opacity-50',
-                    'paused': 'cursor-pointer bg-red-500',
-                    'finished': 'cursor-pointer bg-green-500'
-                  }[pomodoro.state]"
-                  @click="pomodoro.state === 'finished' ? save(pomodoro) : remove(pomodoro)">
-                  <svg class="fill-current text-white text-lg w-4" viewBox="0 0 512 512" width="24px" height="24px">
-                    <path :d="pomodoro.state === 'finished' ? icons.check : icons.trash" />
-                  </svg>
-                </button>
-              </div>
-              <div class="w-full bg-gray-100 h-1 mt-1">
-                <span 
-                  :class="{
-                    'running': 'bg-yellow-500',
-                    'paused': 'bg-gray-500',
-                    'finished': 'bg-blue-500'
-                  }[pomodoro.state]"
-                  class="h-1 block transition-all" 
-                  :style="{'width': 100 - (pomodoro.time_left / (60 * 25) * 100) + '%'}">
-                </span>
-              </div>                
-              </div>              
+                <div 
+                  class="w-full h-1 mt-1"
+                  :class="template_by_state[pomodoro.state].progress.bg">
+                  <template x-if="template_by_state[pomodoro.state].timer.property === 'time_left'">                  
+                  <span                     
+                    :class="template_by_state[pomodoro.state].progress.bar"
+                    class="h-1 block transition-all" 
+                    :style="{'width': 100 - (pomodoro[template_by_state[pomodoro.state].timer.property] / (60 * 25) * 100) + '%'}">
+                  </span>
+                  </template>
+                  <template x-if="template_by_state[pomodoro.state].timer.property === 'breaking_left'">
+                    <span                      
+                      :class="template_by_state[pomodoro.state].progress.bar"
+                      class="h-1 block transition-all" 
+                      :style="{'width': 100 - (pomodoro[template_by_state[pomodoro.state].timer.property] / (60 * 5) * 100) + '%'}">
+                    </span>                  
+                  </template>
+                </div>                   
+              </article>
+              <div x-text="JSON.stringify(template_by_state[pomodoro.state])"></div>
             </template>
           </div>
         </section>
